fix: Clean up scrollbars

--- a/src/renderer/styles/details.less
+++ b/src/renderer/styles/details.less
@@ -11,26 +11,6 @@
     margin: .5rem 1.5rem 1rem
   }
 
-  &::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(50,50,50,.25);
-    border: 2px solid transparent;
-    border-radius: 10px;
-    background-clip: padding-box;
-
-    &:hover {
-      background-color: rgba(50,50,50,.5);
-    }
-  }
-
-  &::-webkit-scrollbar-track {
-    background: white;
-  }
-
   .LogLineData {
     p, span {
       user-select: initial;
