--- a/src/renderer/styles/logtable.less
+++ b/src/renderer/styles/logtable.less
@@ -60,44 +60,6 @@
       background-color: @gray3;
     }
   }
-
-  &::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(50,50,50,.25);
-    border: 2px solid transparent;
-    border-radius: 10px;
-    background-clip: padding-box;
-
-    &:hover {
-      background-color: rgba(50,50,50,.5);
-    }
-  }
-
-  &::-webkit-scrollbar-button {
-      width: 0;
-      height: 0;
-      display: none;
-  }
-
-  &::-webkit-scrollbar-corner {
-      background-color: transparent;
-  }
-
-  .ScrollbarLayout_face {
-    background-color: @slate_blue_grey;
-    border-radius: 10px;
-    margin-right: 2px;
-    opacity: .4;
-    transition: opacity .5s linear;
-  }
-
-  .ScrollbarLayout_face:hover, .faceActive {
-    opacity: 1;
-  }
 }
 
 .bp3-dark {
